--- a/docs/01-Java/06-DateBase/MyBatis-Plus code generate.mdx
+++ b/docs/01-Java/06-DateBase/MyBatis-Plus code generate.mdx
@@ -54,7 +54,8 @@ public class NewCodeGenerator {
                                 .moduleName("system")
                                 .entity("po")
                                 .serviceImpl("service.impl")
-                                .pathInfo(Collections.singletonMap(OutputFile.xml, System.getProperty("user.dir")+"\\src\\main\\java")))
+                                .pathInfo(Collections.singletonMap(OutputFile.xml, System.getProperty("user.dir")+"\\src\\main\\resources\\mapper\\test")))
+            
                 .strategyConfig(builder ->
                         builder.addInclude("table_a")
                                 .controllerBuilder()
@@ -79,6 +80,7 @@ public class NewCodeGenerator {
 
                                 .mapperBuilder()
                                 .enableFileOverride()
+                                .mapperAnnotation(Mapper.class)
 
                 ).templateEngine(new FreemarkerTemplateEngine()).execute();
     }
