--- a/docs/09-Develop-Tools/Most used Git Commands.mdx
+++ b/docs/09-Develop-Tools/Most used Git Commands.mdx
@@ -193,6 +193,7 @@ git tag v1.0
 
 #如果想要打标签在某个指定历史commit上：
 git tag v0.9 f52c633
+git tag -a <tagname> -m "<message>"
 
 # 可以通过如下命令查看一个tag信息：
 git show v0.1
