change docSearch appId

--- a/docs/01-Java/04-Interview/Java-Case-Interview-one.mdx
+++ b/docs/01-Java/04-Interview/Java-Case-Interview-one.mdx
@@ -10,11 +10,11 @@ sidebar_position: 1
 - 面向过程更注重每一个步骤以及其顺序，面向对象更注重哪些对象，他们具有哪些能力
 - 面向过程比较直接，而面向对象更易于复用、扩展和维护
 
-**三大特性**：
+**三大特性**:
 
 封装：内部细节隐藏 只提供对外的接口 
 
-> javabean属性只能通过set方法赋值，不能使用Classname.filed直接赋值。
+> javabean属性只能通过set方法赋值, 不能使用`ClassInstance.filed`直接赋值。
 
 继承：子类共性的方法和属性在父类中体现出来，子类只需要做出特性的扩展即可。
 
