some package updates

--- a/docs/02-Frontend/Drag and Drop Container Movement.mdx
+++ b/docs/02-Frontend/Drag and Drop Container Movement.mdx
@@ -1,3 +1,10 @@
+---
+title: A Robust Draggable Element
+sidebar_label: A Robust Draggable Element
+sidebar_position: 16
+description: A Robust Draggable Element
+---
+
 # Building a Robust Draggable Element: A Step-by-Step Bug Fixing Journey
 
 Creating a draggable element seems simple at first, but there are many edge cases and bugs that can ruin the user experience. This guide walks through building a draggable icon with text, and most importantly, how to fix all the common issues that arise.
