--- a/docs/02-Frontend/react.mdx
+++ b/docs/02-Frontend/react.mdx
@@ -1,7 +1,11 @@
+---
+title: Basic React
+sidebar_label: Basic React
+sidebar_position: 15
+description: Basic React
+---
+
 # Basic React
-
-
-
 
 
 ## Updating a nested object
