--- a/docs/01-Java/03-ProblemSummary/02-Java problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/02-Java problems.mdx
@@ -1,9 +1,6 @@
----
-title: Java相关问题处理
-sidebar_label: Java相关问题处理
----
 
-## SpringBoot相关问题
+
+# SpringBoot相关问题
 
 ### Springboot启动时报错 org.springframework.boot不存在
 
@@ -159,35 +156,6 @@ mysql 不要使用字段类型tinyint 可能你更新的1会变成49哦
 export LANG="zh_CN.UTF-8"
 export LC_ALL="zh_CN.UTF-8"
 ```
-
-## mojibake chinese characters in Resttemplate
-
-When you use Spring Boot mvc, provide a api endpoint,
-
-maybe confront mojibake chinese characters.
-
-It's not the problem of Spring Boot, but what the client you use.
-
-result form is below.
-
-| server receive content-type     | client Content-Type             | client Accept-Charset | lib use      | worked?  |
-| ------------------------------- | ------------------------------- | --------------------- | ------------ | -------- |
-| application/json; charset=UTF-8 | application/json                | charset=UTF-8         | RestTemplate | Yes      |
-| application/json; charset=UTF-8 | application/json; charset=UTF-8 |                       | RestTemplate | Yes      |
-| application/json; charset=UTF-8 | application/json                | charset=UTF-8         | HttpClient   | Yes      |
-| application/json; charset=UTF-8 | application/json; charset=UTF-8 |                       | HttpClient   | Yes      |
-| text/plain; charset=UTF-8       | application/json                | charset=UTF-8         | RestTemplate | ***No*** |
-| text/plain; charset=UTF-8       | application/json; charset=UTF-8 |                       | RestTemplate | Yes      |
-| text/plain; charset=UTF-8       | application/json                | charset=UTF-8         | HttpClient   | Yes      |
-| text/plain; charset=UTF-8       | application/json; charset=UTF-8 |                       | HttpClient   | Yes      |
-
-finally conclusion about the form , only when you use RestTemplate, and separately set the `Content-Type`
-
-and `Accept-Charset`, the problem will occur.
-
-thanks for your reading.
-
-If you have any problem, feel free to contact with me.
 
 ## 其他（不便归类）
 
