--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,9 +1,11 @@
 # intro
 
+
 import Hello from '@site/src/components/Hello';
 
 <Hello />
 
+1. React 组件 live code
 ```jsx live
 function Clock(props) {
   const [date, setDate] = useState(new Date());
@@ -27,7 +29,7 @@ function Clock(props) {
 }
 ```
 
-1. Tabs/TabItem 组件实现多标签内容 
+2. Tabs/TabItem 组件实现多标签内容 
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -45,7 +47,7 @@ import TabItem from '@theme/TabItem';
   </TabItem>
 </Tabs>
 
-2. Admonition 提示块
+3. Admonition 提示块
 
 import Admonition from '@theme/Admonition';
 
@@ -53,7 +55,7 @@ import Admonition from '@theme/Admonition';
   这是一个提示块，可以用来高亮重要信息。
 </Admonition>
 
-3. CodeBlock 高亮代码块
+4. CodeBlock 高亮代码块
 
 import CodeBlock from '@theme/CodeBlock';
 
@@ -61,9 +63,6 @@ import CodeBlock from '@theme/CodeBlock';
 {`console.log("Hello, world!");`}
 </CodeBlock>
 
-4. details 折叠内容
+6. 页面申明 
 
-<details>
-  <summary>点击展开详细内容</summary>
-  这里是可折叠的内容，可以放更多说明或代码。
-</details>
+<TailProtocal />
