每个页面都使用声明

--- a/docs/01-Java/01-JavaBase/01-lambda.mdx
+++ b/docs/01-Java/01-JavaBase/01-lambda.mdx
@@ -197,3 +197,5 @@ Set<String> nationalities = album.getMusicians()
     .peek(nation-> System.out.println("Found nationality: "+nation))
     .collect(Collectors.<String>toSet());
 ```
+
+<TailProtocal />
