--- a/docs/01-Java/02-Spring/08-Spring AOP Pointcut.mdx
+++ b/docs/01-Java/02-Spring/08-Spring AOP Pointcut.mdx
@@ -305,3 +305,5 @@ public class Test4ComposablePointcut {
 
 ControlFlowPointcut匹配程序的调用流程，不是对某个方法执行所在Joinpoint处的单一特征进行匹配，而是要被特定的类执行时，才会进行方法拦截。
 因为ControlFlowPointcut类型的Pointcut需要在运行期间检查程序的调用栈，而且每次方法调用都需要检查，所以性能比较差。
+
+<TailProtocal />
