--- a/docs/01-Java/02-Spring/14-AOP Configuration of Schema.mdx
+++ b/docs/01-Java/02-Spring/14-AOP Configuration of Schema.mdx
@@ -349,3 +349,5 @@ PT in methodmethod1]>>>>>StopWatch '': running time = 121900 ns; [] took 121900 
 > 参考资料：
 >
 > 1. 书籍 王福强-Spring揭秘
+
+<TailProtocal />
