--- a/docs/01-Java/03-ProblemSummary/02-Java problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/02-Java problems.mdx
@@ -385,3 +385,5 @@ solution
 3. write @Valid before the parameter which you wanna check 
 
 >  Do not use one more check in one class
+
+<TailProtocal />
