--- a/docs/01-Java/06-DateBase/04-Java-Case-Distribution.mdx
+++ b/docs/01-Java/06-DateBase/04-Java-Case-Distribution.mdx
@@ -53,3 +53,5 @@ sidebar_label: 分布式问题
 利用唯一约束，插入表成功获取锁成功，插入表失败获取锁失败；如果操作执行完需要删除锁。
 
 该锁不可重入，如果要实现可以维护当前获取锁线程的唯一标识，再重入时判断是否为当前获取锁的线程，是则默认获取锁成功。
+
+<TailProtocal />
