--- a/docs/01-Java/06-DateBase/06-Mybatis-Plus quick start.mdx
+++ b/docs/01-Java/06-DateBase/06-Mybatis-Plus quick start.mdx
@@ -89,3 +89,5 @@ public class SampleTest {
 ```java
 usersMapper.selectOne(new QueryWrapper<JwtUserPO>().lambda().apply("USERNAME = {0,jdbcType=CHAR,typeHandler=" + TrimmedStringTypeHandler.class.getCanonicalName() + "}", username));
 ```
+
+<TailProtocal />
