--- a/docs/02-Frontend/01-JQuery-revese-selector.mdx
+++ b/docs/02-Frontend/01-JQuery-revese-selector.mdx
@@ -87,3 +87,5 @@ $( "input[name!='newsletter']" ).next().append( "<b>; not newsletter</b>" );
 ![image-20211102231338241](https://s2.loli.net/2023/07/15/HsKBpjJUXtC2FwG.png)
 
 > 更多选择器用法请 [看这里](https://api.jquery.com/category/selectors/)
+
+<TailProtocal />
