--- a/docs/02-Frontend/06-vue route.mdx
+++ b/docs/02-Frontend/06-vue route.mdx
@@ -165,3 +165,5 @@ const inputText = ref<string>('hello')
 为了防止命令的拼写错误，建议直接复制指令并粘贴到您的VS Code中。您可以从 [GitHub](https://github.com/Halcyon666/taco-shop.git) 存储库 下载代码。
 
 感谢您花费宝贵的时间来阅读文章。如果您觉得我的文章有用，请给予一点肯定。同时，随时提出您可能有的任何问题。
+
+<TailProtocal />
