--- a/docs/02-Frontend/08-pnpm.mdx
+++ b/docs/02-Frontend/08-pnpm.mdx
@@ -50,3 +50,5 @@ Problems
 ![image.png](https://s2.loli.net/2024/03/06/F5OPANkdLpwbD8z.png)
 
 Just delete the directory,display on the console `C:\Users\xx\AppData\Local\pnpm`
+
+<TailProtocal />
