--- a/docs/02-Frontend/11-Integrate husky prettier etc.mdx
+++ b/docs/02-Frontend/11-Integrate husky prettier etc.mdx
@@ -95,3 +95,5 @@ This conclude eslint fix code and prettier format code.
 ## To the End 
 
 Thanks for your time, If you get something from my article, please give me clap, meanwhile, feel free to ask question as you need.
+
+<TailProtocal />
