--- a/docs/02-Frontend/16-Drag and Drop Container Movement.mdx
+++ b/docs/02-Frontend/16-Drag and Drop Container Movement.mdx
@@ -511,3 +511,5 @@ Here's the final, fully debugged version:
 7. **Consider performance** by adding listeners only when needed
 
 This implementation provides a smooth, reliable dragging experience with proper click detection and boundary constraints. The step-by-step debugging process shows how small issues can compound into major usability problems, and how systematic testing and fixing leads to a robust solution.
+
+<TailProtocal />
