--- a/docs/07-Container-Tech/docker/02-Docker-Command-and-Dockerfile.mdx
+++ b/docs/07-Container-Tech/docker/02-Docker-Command-and-Dockerfile.mdx
@@ -211,3 +211,5 @@ docker run -p 8080:800 --rm learncase:latest
 >
 > 1. [Dockerfile](https://docs.docker.com/engine/reference/builder/)
 > 2. [how-cmd-and-entrypoint-interact](https://docs.docker.com/engine/reference/builder/#understand-how-cmd-and-entrypoint-interact)
+
+<TailProtocal />
