--- a/docs/07-Container-Tech/docker/04-idea-docker deployment.mdx
+++ b/docs/07-Container-Tech/docker/04-idea-docker deployment.mdx
@@ -180,3 +180,5 @@ services:
 192.168.3.163:8080
 
 ![image-20230705233312670](https://s2.loli.net/2023/07/15/azqiL7VdEQXxYtC.png)
+
+<TailProtocal />
