--- a/docs/08-Linux/01-Common-Shell-Command.mdx
+++ b/docs/08-Linux/01-Common-Shell-Command.mdx
@@ -91,3 +91,5 @@ sz 下载 rz 上传
 ### linux关闭java进程
 
 `kill -9 $(ps -ef | grep -w "xxx-1.0.jar" |  grep -v "grep" | awk '{print $2}')`
+
+<TailProtocal />
