--- a/docs/11-AI And BD/02-hadoop.mdx
+++ b/docs/11-AI And BD/02-hadoop.mdx
@@ -415,3 +415,5 @@ reduce任务数的阀值，如果一个application包含的reduce数小于该值
 
 mapreduce.job.ubertask.maxbytes
 application的输入大小的阀值。默认为dfs.block.size的值。当实际的输入大小部小于该值的设定，便会认为该application为一个小的application。
+
+<TailProtocal />
