--- a/docs/01-Java/03-ProblemSummary/03-github problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/03-github problems.mdx
@@ -37,3 +37,5 @@ To https://github.com/Halcyon666/taco-shop.git
    2670324..332beb2  main -> main
 [url "https://ghproxy.com/https://github.com"]
 ```
+
+<TailProtocal />
