修原生details问题

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -63,6 +63,15 @@ import CodeBlock from '@theme/CodeBlock';
 {`console.log("Hello, world!");`}
 </CodeBlock>
 
+5. Details 折叠内容
+
+<details>
+  <summary>点击展开详细内容</summary>
+  这里是可折叠的内容，可以放更多说明或代码。
+</details>
+
+
+
 6. 页面申明 
 
 <TailProtocal />
