--- a/docs/10-Others/01-Windowns/01-software-use-case.mdx
+++ b/docs/10-Others/01-Windowns/01-software-use-case.mdx
@@ -18,7 +18,6 @@ sidebar_label: 常用软件使用问题
 删除以上目录中的 `idea211.evaluation.key`
 
 
-
 ## 浏览HEIC图片工具
 
 [copytrans](https://copytrans.studio/copytrans-heic-is-now-part-of-copytrans-studio/)
@@ -47,5 +46,19 @@ sidebar_label: 常用软件使用问题
   "picgoPlugins": {}
 }
 ```
+
+## 在vscode中
+
+### 使用typora中安装的`PicGo-Core`
+
+1. 在vscode中安装PicGo插件
+2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\.picgo\config.json`
+
+![](https://s2.loli.net/2025/09/20/s8rYEGoZlyJe3US.png)
+
+### 使用npm安装的`picgo`
+
+1. 在vscode中安装PicGo插件
+2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\AppData\Local\pnpm\global\5\node_modules\picgo\config.json`
 
 <TailProtocal />
