计算机网络

--- a/docs/05-ReadBook/01-Computor theory/03-计算机网络-网络概述.mdx
+++ b/docs/05-ReadBook/01-Computor theory/03-计算机网络-网络概述.mdx
@@ -1,3 +1,5 @@
+# 计算机网络 - 网络概述
+
 ## 特点
 
 互连-无主从关系
@@ -168,5 +170,10 @@ ISP（Internet Service Provider）互联
 | 传输层 | 确保报文提交给正确进程，如端口号 | `TCP`、`UDP` | 段(segment)port |
 | 应用层 | 支持用户通过用户代理或者网络接口使用网络 | `FTP`、`SMTP`、`HTTP` | 报文(message) |
 
+**所有内容来自，保留所有课程著作权限。文档仅限学习使用。**
+
+**如有侵权联系  `whalefallcl@icloud.com`**
+
+**https://www.icourse163.org/learn/HIT-154005?tid=1474180488#/learn/announce**
 
 <TailProtocal />
